feat: work_list に物件区分絞り込みと新しいもの順ソートを追加
- construction_type_id 指定時: construction_type_list から名前を取得し
  q[0]=construction_type=<名前> フィルタに変換して送信
- sort=desc / updated_desc 指定時: limit=1000 で全取得後
  クライアント側で updated 降順ソートして返す
  （BUILDYNOTE API 側にソートパラメータがないため）
- limit / page パラメータも直接指定できるよう追加
